# ota

./: Cargo.toml  Dockerfile  README.md  TODO.txt
.cargo/: config
.github/workflows/: release.yml  rust.yml
site/: admin.css  base.css  index.html  intro.css  main.js  reset.css
site/js/: main.js
src/: articles.rs  error.rs  index.rs  main.rs  query.rs  templates.rs
src/index/: local.rs  mod.rs  rdb.rs
templates/: admin.hbs  admin.html.hbs  index.hbs  index.html.hbs  main.hbs  main.html.hbs
templates/articles/: index.html.hbs
