[package]
name = "ota"
version = "0.1.0"
authors = ["John Barker <jebarker@gmail.com>"]
edition = "2018"

[features]

[dependencies]
handlebars = "4"
rand = "0.6"
regex = "1.0.1"
rocket = "0.5.0-rc"
rocket_codegen = "0.5.0-rc"
serde = "1"
serde_derive = "1"
serde_json = "1"

[dependencies.chrono]
version = "0.4"
features = ["serde", "rustc-serialize"]
