[package]
name = "ota"
version = "0.1.0"
authors = ["John Barker <jebarker@gmail.com>"]
edition = "2021"

[features]

[dependencies]
anyhow = "*"
handlebars = "4"
rand = "0.6"
regex = "1.0.1"
rocket = "0.5.0-rc.2"
rocket_codegen = "0.5.0-rc.2"
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
thiserror = "*"
walkdir = "2"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dev-dependencies]
tempdir = "0.3"
