[package]
name = "ota"
version = "0.1.0"
authors = ["John Barker <jebarker@gmail.com>"]
edition = "2021"

[features]

[dependencies]
anyhow = "*"
handlebars = "4"
rand = "*"
regex = "*"
rocket = "0.5.0-rc.2"
rocket_codegen = "0.5.0-rc.2"
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
rusty_ulid = { version = "*", features = [ "serde" ] }
serde = "*"
serde_derive = "*"
serde_json = "*"
thiserror = "*"
walkdir = "*"

[dependencies.chrono]
version = "*"
features = ["serde"]

[dev-dependencies]
tempdir = "*"
